<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_long">Thank you for choosing The Shoe Store.
    \n\nThis app allows you to view and update your shoe inventory.
    \n\nPlease proceed to the next screen to view instructions.</string>
    <string name="proceed">Proceed</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_long">
        1. Click \'Proceed\' to go to the Shoe List
        \n\n2. Click the \'+\' button to add a new shoe
        \n\n3. Enter the details for the shoe you wish to add
        \n\n4. Click \'Cancel\' if you want to return to the Shoe List without adding the shoe
        \n\n5. Click \'Save\' to save the shoe and return to the Shoe List
        \n\n6. You can return to the \'Login\' Screen by clicking \'Logout\' from the menu
    </string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="shoe_list">Shoe List</string>
    <string name="add">Add</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="welcome_shoes_description">Shoes</string>

    <string name="email_error">Please enter your email address.</string>
    <string name="password_error">Please enter your password.</string>
</resources>
