<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.SharedViewModel" />

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".shoelist.ShoeDetailsFragment">

       <TextView
           android:id="@+id/shoe_name_text"
           style="@style/labels"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/padding"
           android:layout_marginTop="@dimen/padding"
           android:text="@string/shoe_name"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <EditText
           android:id="@+id/shoe_name_editText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/padding"
           android:layout_marginTop="@dimen/small_padding"
           android:layout_marginEnd="@dimen/padding"
           android:ems="10"
           android:inputType="textPersonName"
           android:minHeight="@dimen/height"
           android:text="@={shoe.name}"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

       <TextView
           android:id="@+id/company_text"
           style="@style/labels"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/padding"
           android:layout_marginTop="@dimen/padding"
           android:text="@string/company"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/shoe_name_editText" />

       <EditText
           android:id="@+id/company_editText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/padding"
           android:layout_marginTop="@dimen/small_padding"
           android:layout_marginEnd="@dimen/padding"
           android:ems="10"
           android:inputType="textPersonName"
           android:minHeight="@dimen/height"
           android:text="@={shoe.company}"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/company_text" />

       <TextView
           android:id="@+id/size_text"
           style="@style/labels"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/padding"
           android:layout_marginTop="@dimen/padding"
           android:text="@string/shoe_size"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/company_editText" />

       <EditText
           android:id="@+id/size_editText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/padding"
           android:layout_marginTop="@dimen/small_padding"
           android:layout_marginEnd="@dimen/padding"
           android:ems="10"
           android:inputType="number"
           android:minHeight="@dimen/height"
           android:text="@={`` + shoe.size}"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/size_text" />

       <TextView
           android:id="@+id/description_Text"
           style="@style/labels"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/padding"
           android:layout_marginTop="@dimen/padding"
           android:text="@string/description"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/size_editText" />

       <EditText
           android:id="@+id/description_editText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/padding"
           android:layout_marginTop="@dimen/small_padding"
           android:layout_marginEnd="@dimen/padding"
           android:ems="10"
           android:gravity="start|top"
           android:inputType="text"
           android:maxLength="100"
           android:minHeight="@dimen/height"
           android:text="@={shoe.description}"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/description_Text" />

       <Button
           android:id="@+id/cancel_button"
           android:layout_width="@dimen/button_width"
           android:layout_height="@dimen/height"
           android:layout_margin="@dimen/padding"
           android:text="@string/cancel"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent" />

       <Button
           android:id="@+id/save_button"
           android:layout_width="@dimen/button_width"
           android:layout_height="@dimen/height"
           android:layout_margin="@dimen/padding"
           android:onClick="@{() -> viewModel.addShoe()}"
           android:text="@string/save"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent" />

   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

